<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseManagement</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="reset_label_signin">重 置</string>
    <string name="login_username_hint">工号或账号</string>
    <string name="login_password_hint">密码</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>